# martian

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  .travis.gofmt.sh  .travis.yml  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  ast.go  build.sh  copy_binary.bzl  deps.bzl  errors.go  go.mod  go.sum  grammar.go  grammar.y  lexer.go  mario.go  mario.y  npm.bzl  parser.go  preprocessor.go  readme  runtime.go  stages.mro
adapters/python/: BUILD.bazel  check.py  join.py  main.py  mario.py  martian.py  martian_shell.py  split.py
adapters/python/tester/: __init__.py
cmd/mrc/: BUILD.bazel  main.go
cmd/mrdr/: BUILD.bazel  main.go
cmd/mrg/: BUILD.bazel  main.go
cmd/mrjob/: BUILD.bazel  default.pgo  mrjob.go  mrjob_generic.go  mrjob_linux.go  mrjob_linux_test.go  mrjob_unix.go  mrjob_windows.go
cmd/mro/: BUILD.bazel  default.pgo  main.go
cmd/mro/check/: BUILD.bazel  main.go
cmd/mro/edit/: BUILD.bazel  main.go
cmd/mro/format/: BUILD.bazel  main.go
cmd/mro/graph/: BUILD.bazel  main.go
cmd/mro2go/: BUILD.bazel  chunk_generator.go  codegen.go  codegen_test.go  main.go  split_pipeline_test.go  split_test.go  stage_generator.go  struct_pipeline_test.go  testdata
cmd/mro2go/testdata/: pipeline_stages.mro  struct_pipeline.mro
cmd/mrp/: BUILD.bazel  configure.go  env.go  main.go  runloop.go  webserver.go
cmd/mrstat/: BUILD.bazel  main.go
cmd/mrt_helper/: BUILD.bazel  main.go
jobmanagers/: BUILD.bazel  bsub.template  bsub.template.example  config.json  fake_remote.template  lsf.template  lsf.template.example  pbs_queue.py  pbspro.template.example  pid_query.sh  qsub.template  qsub.template.example  retry.json  sge.template  sge.template.example  sge_queue.py  slurm.template.example  slurm_queue.py  torque.template.example
jobmanagers/cs/: bsub.template  qsub.template
martian/adapter/: BUILD.bazel  adapter.go  profile.go
martian/api/: BUILD.bazel  debug.go  endpoints.go  files_listing.go  metadata_query.go  pipestance_info.go  serve_metadata.go
martian/api/webdebug/: BUILD.bazel  debug.go
martian/core/: BUILD.bazel  argument_map.go  argument_map_test.go  binding.go  errors.go  exec.go  fork.go  fork_test.go  iostats.go  iostats_test.go  jobdef.go  jobdef_test.go  jobinfo.go  jobinfo_test.go  jobmanager.go  jobmanager_local.go  jobmanager_remote.go  loadavg_generic.go  loadavg_linux.go  loadavg_linux_test.go  maxjobs_semaphore.go  meminfo_generic.go  meminfo_linux.go  meminfo_linux_test.go  metadata.go  metadata_test.go  mrt.go  node.go  override.go  perf.go  perf_generic.go  perf_unix.go  perf_unix_subprocess_test.go  perf_unix_test.go  pipestance.go  post_process.go  post_process_test.go  profile_mode.go  resolve.go  resolve_test.go  (+23 more)
martian/core/testdata/: .gitignore  map_call_edge_cases.mro  mock_stages.mro  simple_struct_pipeline.mro  stage.py  stages.mro  struct_pipeline.mro  vsize.py
martian/syntax/: BUILD.bazel  ast.go  bindings.go  builtin_types.go  builtin_types_test.go  call.go  callable.go  collection_types.go  collection_types_test.go  compile_calls.go  compile_errors_test.go  compile_params.go  compile_params_test.go  compile_pipelines.go  compile_stages.go  compile_types.go  disabled_exp.go  dot.go  equivalence.go  equivalence_test.go  errors.go  expression.go  expression_test.go  fix_includes.go  format_callable.go  format_callable_test.go  format_exp.go  format_exp_json.go  format_exp_test.go  format_types.go  formatter.go  formatter_test.go  generate_grammar.go  go121_test.go  go122_test.go  grammar.go  grammar.y  include_test.go  lexer.go  map_call_source.go  (+33 more)
martian/syntax/ast_builder/: BUILD.bazel  exp.go  exp_test.go  make_call_mro.go  struct.go  struct_test.go
martian/syntax/graph/: BUILD.bazel  dot.go
martian/syntax/refactoring/: BUILD.bazel  edit.go  find_unused_callables.go  find_unused_callables_test.go  find_unused_outputs.go  pragma.go  refactor.go  remove_calls.go  remove_calls_test.go  remove_input_param.go  remove_output_param.go  remove_output_param_test.go  remove_unused_outputs.go  rename_callable.go  rename_callable_test.go  rename_input_param.go  rename_output_param.go  (+2 more)
martian/test/: BUILD.bazel  doc.go  sum_squares.mro  test_phaser_pd.mro
martian/util/: BUILD.bazel  cgroups_generic.go  cgroups_linux.go  cgroups_linux_test.go  directory.go  directory_linux.go  directory_linux_test.go  errors.go  exec.go  exec_linux.go  file_generic.go  file_linux.go  file_unix.go  file_windows.go  git.go  git_linux.go  libc_cgo.go  libc_generic.go  log.go  lookpath_go119.go  lookpath_old.go  signal.go  signal_generic.go  signal_linux.go  signal_linux_amd64.s  stamp.go  sysinfo.go  sysinfo_generic.go  sysinfo_linux.go  util.go  version.go  walk.go  walk_linux.go  walk_linux_test.go  zip.go
test/disable_test/: BUILD.bazel  disable_test.json  pipeline.mro  run_test.sh
test/exit_test/: BUILD.bazel  README  exit_test.json  pipeline.mro
test/files_test/: BUILD.bazel  README  call.mro  pipeline.mro  run_test.sh
test/fork_test/: .gitattributes  .gitignore  BUILD.bazel  README  autoretry_fail.json  autoretry_fail_test.sh  autoretry_pass.json  autoretry_pass_test.sh  autoretry_remote_pass.json  autoretry_remote_pass.sh  fail1_test.json  fork_test.json  pipeline.mro  retry_test.json  retry_test.sh  run_fail1_test.sh
test/map_test/: .gitattributes  BUILD.bazel  README  map_test.json  pipeline.mro  run_test.sh
test/retain_test/: BUILD.bazel  README  call.mro  pipeline.mro  run_test.sh
test/retry_test/: BUILD.bazel
test/split_test/: BUILD.bazel  README  pipeline.mro  run_test.sh  split_test.json
test/split_test_go/: .gitattributes  .gitignore  BUILD.bazel  disable_pipeline.mro  disable_test.json  overrides.json  pipeline.mro  pipeline_stages.mro  run_disable_test.sh  run_test.sh
test/struct_test/: BUILD.bazel  README  pipeline.mro
tools/: BUILD.bazel  README.md  copy_binary.bzl  extract_file.bzl  mro2go.bzl  mro_rules.bzl  providers.bzl  status.sh  util.bzl
tools/docs/: BUILD.bazel  _mro_rules_doc.bzl  mro_rules.md  update.sh
tools/private/: BUILD.bazel  mrf_rules.bzl  mro2go.bzl  mro_library.bzl  mro_test.bzl
(+1043 files in other folders)
