load("@bazel_gazelle//:def.bzl", "gazelle")
load("//tools:copy_binary.bzl", "copy_binary")

# gazelle:resolve go github.com/martian-lang/martian/martian/api @martian//martian/api
# gazelle:resolve go github.com/martian-lang/martian/martian/core @martian//martian/core
# gazelle:resolve go github.com/martian-lang/martian/martian/syntax @martian//martian/syntax
# gazelle:resolve go github.com/martian-lang/martian/martian/util @martian//martian/util
# gazelle:prefix github.com/martian-lang/martian
# gazelle:exclude vendor
gazelle(name = "gazelle")

copy_binary(
    name = "mro",
    src = "//cmd/mro",
    dest = "bin/mro",
    visibility = ["//visibility:public"],
)

copy_binary(
    name = "mrg",
    src = "//cmd/mrg",
    dest = "bin/mrg",
    visibility = ["//visibility:public"],
)

copy_binary(
    name = "mrjob",
    src = "//cmd/mrjob",
    dest = "bin/mrjob",
    visibility = ["//cmd/mrp:__pkg__"],
)

copy_binary(
    name = "mro2go",
    src = "//cmd/mro2go",
    dest = "bin/mro2go",
    visibility = ["//visibility:public"],
)

copy_binary(
    name = "mrp",
    src = "//cmd/mrp",
    dest = "bin/mrp",
    visibility = ["//visibility:public"],
)

copy_binary(
    name = "mrstat",
    src = "//cmd/mrstat",
    dest = "bin/mrstat",
    visibility = ["//visibility:public"],
)

copy_binary(
    name = "sum_squares",
    testonly = True,
    src = "//martian/test/sum_squares",
    dest = "bin/sum_squares",
    visibility = ["//test/split_test_go:__pkg__"],
)
