load("@rules_python//python:defs.bzl", "py_library")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "config",
    srcs =
        [
            "config.json",
            "retry.json",
        ],
    visibility = [
        "//:__pkg__",
        "//cmd/mrp:__pkg__",
    ],
)

filegroup(
    name = "templates",
    srcs = glob(["*.template"]),
    visibility = [
        "//:__pkg__",
        "//cmd/mrp:__pkg__",
    ],
)

filegroup(
    name = "examples",
    srcs = glob(["*.template.example"]),
    visibility = ["//visibility:public"],
)

py_library(
    name = "sge_queue",
    srcs = ["sge_queue.py"],
)

py_library(
    name = "slurm_queue",
    srcs = ["slurm_queue.py"],
)

filegroup(
    name = "queue_checks",
    srcs = [
        ":sge_queue",
        ":slurm_queue",
    ],
    visibility = [
        "//:__pkg__",
        "//cmd/mrp:__pkg__",
    ],
)

filegroup(
    name = "jobmanagers",
    srcs = [
        ":config",
        ":queue_checks",
        ":templates",
    ],
    visibility = [
        "//:__pkg__",
        "//cmd/mrp:__pkg__",
    ],
)

pkg_tar(
    name = "pkg_cs",
    srcs = [
        ":config",
        ":examples",
        ":queue_checks",
    ],
    include_runfiles = 1,
    package_dir = "jobmanagers",
    visibility = ["//:__pkg__"],
)

pkg_tar(
    name = "pkg",
    srcs = [
        ":templates",
    ],
    include_runfiles = 1,
    package_dir = "jobmanagers",
    visibility = ["//:__pkg__"],
    deps = [
        ":pkg_cs",
    ],
)
