load("@rules_python//python:defs.bzl", "py_library")

filegroup(
    name = "config",
    srcs =
        [
            "config.json",
            "retry.json",
        ],
    visibility = [
        "//:__pkg__",
        "//cmd/mrp:__pkg__",
    ],
)

filegroup(
    name = "templates",
    srcs = glob(
        ["*.template"],
        exclude = ["fake_remote.template"],
    ),
    visibility = [
        "//:__pkg__",
        "//cmd/mrp:__pkg__",
    ],
)

filegroup(
    name = "examples",
    srcs = glob(["*.template.example"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "fake_remote",
    testonly = True,
    srcs = [
        "fake_remote.template",
        "pid_query.sh",
    ],
    visibility = ["//test:__subpackages__"],
)

py_library(
    name = "sge_queue",
    srcs = ["sge_queue.py"],
)

py_library(
    name = "slurm_queue",
    srcs = ["slurm_queue.py"],
)

py_library(
    name = "pbs_queue",
    srcs = ["pbs_queue.py"],
)

filegroup(
    name = "queue_checks",
    srcs = [
        ":sge_queue",
        ":slurm_queue",
        ":pbs_queue",
    ],
    visibility = [
        "//:__pkg__",
        "//cmd/mrp:__pkg__",
    ],
)

filegroup(
    name = "jobmanagers",
    srcs = [
        ":config",
        ":queue_checks",
        ":templates",
    ],
    visibility = [
        "//:__pkg__",
        "//cmd/mrp:__pkg__",
    ],
)
