load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "copy_binary",
    srcs = ["copy_binary.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "extract_file",
    srcs = ["extract_file.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "mro_rules",
    srcs = ["mro_rules.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//tools/private:mrf_rules",
        "//tools/private:mro_library",
        "//tools/private:mro_test",
    ],
)
