load("@rules_python//python:defs.bzl", "py_library")

filegroup(
    name = "python",
    srcs = [":martian_shell"],
    visibility = ["//:__pkg__"],
)

py_library(
    name = "martian_shell",
    srcs = ["martian_shell.py"],
    visibility = [
        "//:__pkg__",
        "//cmd/mrjob:__pkg__",
        "//cmd/mrp:__pkg__",
    ],
    deps = [":martian"],
)

alias(
    name = "testing",
    testonly = 1,
    actual = ":martian_shell",
    visibility = ["//visibility:public"],
)

py_library(
    name = "martian",
    srcs = ["martian.py"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_library(
    name = "check",
    srcs = ["check.py"],
)
