load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/martian-lang/martian/cmd/mrc",
    visibility = ["//visibility:private"],
    deps = [
        "//martian/core:go_default_library",
        "//martian/syntax:go_default_library",
        "//martian/util:go_default_library",
        "@com_github_martian_lang_docopt_go//:go_default_library",
    ],
)

go_binary(
    name = "mrc",
    embed = [":go_default_library"],
    visibility = ["//:__pkg__"],
)
