load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mrjob.go",
        "mrjob_unix.go",
    ],
    importpath = "github.com/martian-lang/martian/cmd/mrjob",
    visibility = ["//visibility:private"],
    deps = [
        "//martian/core:go_default_library",
        "//martian/util:go_default_library",
        "@com_github_google_shlex//:go_default_library",
    ],
)

go_binary(
    name = "mrjob",
    embed = [":go_default_library"],
    visibility = ["//:__pkg__"],
)
