load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mrjob_lib",
    srcs = [
        "mrjob.go",
        "mrjob_unix.go",
    ],
    importpath = "github.com/martian-lang/martian/cmd/mrjob",
    visibility = ["//visibility:private"],
    deps = [
        "//martian/core",
        "//martian/util",
        "@com_github_google_shlex//:go_default_library",
    ],
)

go_binary(
    name = "mrjob",
    embed = [":mrjob_lib"],
    visibility = ["//:__pkg__"],
)
