load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/martian-lang/martian/cmd/mro",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/mro/check:go_default_library",
        "//cmd/mro/edit:go_default_library",
        "//cmd/mro/format:go_default_library",
        "//martian/util:go_default_library",
    ],
)

go_binary(
    name = "mro",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
