load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mro_lib",
    srcs = ["main.go"],
    importpath = "github.com/martian-lang/martian/cmd/mro",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/mro/check",
        "//cmd/mro/edit",
        "//cmd/mro/format",
        "//cmd/mro/graph",
        "//martian/util",
    ],
)

go_binary(
    name = "mro",
    embed = [":mro_lib"],
    visibility = ["//visibility:public"],
)
