load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "mro2go_lib",
    srcs = [
        "chunk_generator.go",
        "codegen.go",
        "main.go",
        "stage_generator.go",
    ],
    importpath = "github.com/martian-lang/martian/cmd/mro2go",
    visibility = ["//visibility:private"],
    deps = [
        "//martian/syntax",
        "//martian/util",
    ],
)

go_binary(
    name = "mro2go",
    embed = [":mro2go_lib"],
    visibility = ["//:__pkg__"],
)

go_test(
    name = "mro2go_test",
    srcs = [
        "codegen_test.go",
        "split_test.go",
    ],
    data = [
        "split_test.go",
        "split_pipeline_test.go",
        "struct_pipeline_test.go",
        "testdata/pipeline_stages.mro",
        "testdata/struct_pipeline.mro",
    ],
    embed = [":mro2go_lib"],
    deps = ["//martian/core"],
)
