load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "webserver.go",
    ],
    importpath = "github.com/martian-lang/martian/cmd/mrp",
    visibility = ["//visibility:private"],
    deps = [
        "//martian/api:go_default_library",
        "//martian/api/webdebug:go_default_library",
        "//martian/core:go_default_library",
        "//martian/syntax:go_default_library",
        "//martian/util:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
        "@com_github_martian_lang_docopt_go//:go_default_library",
    ],
)

go_binary(
    name = "mrp",
    data = [
        "//:mrjob",
        "//adapters/python:martian_shell",
        "//jobmanagers",
        "//web/martian",
    ],
    embed = [":go_default_library"],
    visibility = ["//:__pkg__"],
)
