load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mrp_lib",
    srcs = [
        "configure.go",
        "env.go",
        "main.go",
        "runloop.go",
        "webserver.go",
    ],
    importpath = "github.com/martian-lang/martian/cmd/mrp",
    visibility = ["//visibility:private"],
    deps = [
        "//martian/api",
        "//martian/api/webdebug",
        "//martian/core",
        "//martian/syntax",
        "//martian/util",
        "@com_github_dustin_go_humanize//:go_default_library",
        "@com_github_martian_lang_docopt_go//:go_default_library",
    ],
)

go_binary(
    name = "mrp",
    data = [
        "//:mrjob",
        "//adapters/python:martian_shell",
        "//jobmanagers",
        "//web/martian",
    ],
    embed = [":mrp_lib"],
    visibility = ["//:__pkg__"],
)
