load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mrstat_lib",
    srcs = ["main.go"],
    importpath = "github.com/martian-lang/martian/cmd/mrstat",
    visibility = ["//visibility:private"],
    deps = [
        "//martian/api",
        "//martian/core",
        "//martian/util",
        "@com_github_martian_lang_docopt_go//:go_default_library",
    ],
)

go_binary(
    name = "mrstat",
    embed = [":mrstat_lib"],
    visibility = ["//:__pkg__"],
)
