load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "adapter",
    srcs = [
        "adapter.go",
        "profile.go",
    ],
    importpath = "github.com/martian-lang/martian/martian/adapter",
    visibility = ["//visibility:public"],
    deps = [
        "//martian/core",
        "//martian/util",
    ],
)

# Backwards compat for what gazelle used to call this target.
alias(
    name = "go_default_library",
    actual = "adapter",
    visibility = ["//visibility:public"],
)
