load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "endpoints.go",
        "files_listing.go",
        "graph_page.go",
        "metadata_query.go",
        "pipestance_info.go",
    ],
    importpath = "github.com/martian-lang/martian/martian/api",
    visibility = ["//visibility:public"],
    deps = [
        "//martian/core:go_default_library",
        "//martian/util:go_default_library",
    ],
)
