load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "endpoints.go",
        "files_listing.go",
        "graph_page.go",
        "metadata_query.go",
        "pipestance_info.go",
        "serve_metadata.go",
    ],
    importpath = "github.com/martian-lang/martian/martian/api",
    visibility = ["//visibility:public"],
    deps = [
        "//martian/core",
        "//martian/util",
    ],
)

# Backwards compat for what gazelle used to call this target.
alias(
    name = "go_default_library",
    actual = "api",
    visibility = ["//visibility:public"],
)
