load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

genrule(
    name = "grammar",
    srcs = ["grammar.y"],
    outs = ["grammar.go"],
    cmd = "$(location @org_golang_x_tools//cmd/goyacc) -l -p mm -o $@ $<",
    tools = ["@org_golang_x_tools//cmd/goyacc"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "ast.go",
        "bindings.go",
        "builtin_types.go",
        "call.go",
        "callable.go",
        "collection_types.go",
        "compile_calls.go",
        "compile_params.go",
        "compile_pipelines.go",
        "compile_stages.go",
        "compile_types.go",
        "disabled_exp.go",
        "dot.go",
        "enforcement_level.go",
        "equivalence.go",
        "errors.go",
        "expression.go",
        "fix_includes.go",
        "format_callable.go",
        "format_exp.go",
        "format_exp_json.go",
        "format_types.go",
        "formatter.go",
        "lexer.go",
        "map_call_source.go",
        "params.go",
        "parsenum.go",
        "parser.go",
        "ref_expression.go",
        "resolve.go",
        "resolve_expression.go",
        "resolve_pipeline.go",
        "resolve_stage.go",
        "resolved_binding.go",
        "stage_language.go",
        "string_intern.go",
        "struct_type.go",
        "tokenizer.go",
        "type_lookup.go",
        "types.go",
        "user_file_type.go",
        "util.go",
        ":grammar",
    ],
    importpath = "github.com/martian-lang/martian/martian/syntax",
    visibility = ["//visibility:public"],
    deps = ["//martian/util:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "builtin_types_test.go",
        "collection_types_test.go",
        "compile_errors_test.go",
        "compile_params_test.go",
        "equivalence_test.go",
        "expression_test.go",
        "format_exp_test.go",
        "formatter_test.go",
        "include_test.go",
        "map_call_test.go",
        "parsenum_test.go",
        "parser_errors_test.go",
        "parser_test.go",
        "ref_expression_test.go",
        "resolve_expression_test.go",
        "resolve_test.go",
        "string_intern_test.go",
        "struct_type_test.go",
        "testhelpers_test.go",
        "tokenizer_test.go",
        "types_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = ["//martian/util:go_default_library"],
)
