load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

_importpath = "github.com/martian-lang/martian/martian/util"

go_library(
    name = "go_default_library",
    srcs = [
        "directory.go",
        "errors.go",
        "exec.go",
        "log.go",
        "signal.go",
        "stamp.go",
        "util.go",
        "version.go",
        "walk.go",
        "zip.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:linux": [
            "cgroups_linux.go",
            "directory_linux.go",
            "exec_linux.go",
            "file_linux.go",
            "git_linux.go",
            "signal_linux.go",
            "walk_linux.go",
        ],
        "//conditions:default": [
            "cgroups_generic.go",
            "file_generic.go",
            "git.go",
            "signal_generic.go",
        ],
    }),
    importpath = _importpath,
    visibility = ["//visibility:public"],
    x_defs = {
        _importpath + ".__VERSION__": "{STABLE_MARTIAN_VERSION}",
    },
    deps = select({
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = select({
        "@io_bazel_rules_go//go/platform:linux": [
            "directory_linux_test.go",
            "walk_linux_test.go",
        ],
        "//conditions:default": [],
    }),
    embed = [":go_default_library"],
)
