load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

_importpath = "github.com/martian-lang/martian/martian/util"

go_library(
    name = "util",
    srcs = [
        "directory.go",
        "errors.go",
        "exec.go",
        "log.go",
        "lookpath_go119.go",
        "signal.go",
        "stamp.go",
        "sysinfo.go",
        "util.go",
        "version.go",
        "walk.go",
        "zip.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:linux": [
            "cgroups_linux.go",
            "directory_linux.go",
            "exec_linux.go",
            "file_linux.go",
            "file_unix.go",
            "git_linux.go",
            "libc_cgo.go",
            "signal_linux.go",
            "sysinfo_linux.go",
            "walk_linux.go",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "cgroups_generic.go",
            "file_generic.go",
            "file_windows.go",
            "git.go",
            "libc_generic.go",
            "signal_generic.go",
            "sysinfo_generic.go",
        ],
        "//conditions:default": [
            "cgroups_generic.go",
            "file_generic.go",
            "file_unix.go",
            "git.go",
            "libc_generic.go",
            "signal_generic.go",
            "sysinfo_generic.go",
        ],
    }),
    cgo = select({
        "@io_bazel_rules_go//go/platform:linux": True,
        "//conditions:default": False,
    }),
    importpath = _importpath,
    visibility = ["//visibility:public"],
    x_defs = {
        _importpath + ".__VERSION__": "{STABLE_MARTIAN_VERSION}",
    },
    deps = select({
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "util_test",
    srcs = select({
        "@io_bazel_rules_go//go/platform:linux": [
            "cgroups_linux_test.go",
            "directory_linux_test.go",
            "walk_linux_test.go",
        ],
        "//conditions:default": [],
    }),
    embed = [":util"],
)

# Backwards compat for what gazelle used to call this target.
alias(
    name = "go_default_library",
    actual = "util",
    visibility = ["//visibility:public"],
)
